syntax = "proto3";

package proto;

option go_package = "/.;proto";
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/*.proto

service ChatAuth {
    rpc RPCLogin (LoginRequest) returns (AuthResponse);
    rpc RPCRegister (RegisterRequest) returns (AuthResponse);
    rpc RPCLogout (LogoutRequest) returns (AuthResponse);
    rpc RPCCheckToken(LogoutRequest) returns (AuthResponse);
}

message LoginRequest {
    string userName=1;
    string passWord=2;
}

message LogoutRequest {
    int32 uid=1;
    string token=2;
}

message RegisterRequest {
    string userName=1;
    string passWord=2;
}

message AuthResponse {
    int32 code=1;
    string msg=2;
    string token=3;
}